# nature-elsewhere

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  changelog.md  favicon  jest.config.js  package-lock.json  package.json  palettes.aseprite  readme.md  rustfmt.toml  to-do.txt  toDo.txt  todo.md  tsconfig.json  webpack.config.js  webpack.config.ts
assets/: a-summary-of-you.yaml  beehive.aseprite  bird.aseprite  block.aseprite  bull.aseprite  bunny.aseprite  cactus.aseprite  cattails.aseprite  char.aseprite  cloud.aseprite  copyright-rndmem.aseprite  favicon.aseprite  flag.aseprite  frog.aseprite  grass.aseprite  hill.aseprite  index-lut.gpl  mem-font.aseprite  nature-elsewhere.aseprite  oddoidSquare.aseprite  palette.aseprite  palettes.aseprite  pixel.aseprite  player.aseprite  pond.aseprite  pumpkin.aseprite  quicksand.aseprite  rain.aseprite  snake.aseprite  social.aseprite  tall-grass.aseprite  tallGrass.aseprite  tree.aseprite  ui.aseprite  water.aseprite
assets/atlas/: appleTree.aseprite  arrow.aseprite  backpacker.aseprite  backpackerIcon.aseprite  bee.aseprite  bird.aseprite  bunny.aseprite  bush.aseprite  cattails.aseprite  charArrow.aseprite  charBackpacker.aseprite  charBee.aseprite  charBird.aseprite  charBunny.aseprite  charFrog.aseprite  charPig.aseprite  charSnake.aseprite  cloud.aseprite  cloudRain.aseprite  cloudRainSplash.aseprite  clover.aseprite  conifer.aseprite  cursor-hand.aseprite  destination.aseprite  egg-compartment.aseprite  flag.aseprite  flower.aseprite  frog.aseprite  grass.aseprite  healthBauble.aseprite  isoGrass.aseprite  itemApple.aseprite  lattice.aseprite  lifeCounter.aseprite  logo.aseprite  meleeButton.aseprite  memFont.aseprite  monument-medium.aseprite  monument-small.aseprite  monument.aseprite  (+46 more)
assets/favicons/: favicon.aseprite
assets/images/: arrow.aseprite  background.aseprite  backpacker.aseprite  bee.aseprite  bird.aseprite  bunny.aseprite  bush.aseprite  cactus.aseprite  cattails.aseprite  checkerboard.aseprite  cloud.aseprite  clover.aseprite  conifer.aseprite  destination.aseprite  flag.aseprite  flower.aseprite  frog.aseprite  grass.aseprite  grid.aseprite  hill.aseprite  iso-grass.aseprite  logo.aseprite  mem-font.aseprite  mountain.aseprite  nature-elsewhere.aseprite  palette.aseprite  path.aseprite  pig.aseprite  pixel.aseprite  player.aseprite  pond.aseprite  pyramid.aseprite  rain-splash.aseprite  rain.aseprite  snake.aseprite  splash.aseprite  subshrub.aseprite  tall-grass.aseprite  tile.aseprite  tiny-backpacker.aseprite  (+12 more)
devlog/20191001/: 20191001.md
devlog/20210123/: 20210123.md
devlog/20210124-gdd/: 20210124-gdd.md
devlog/20210227/: 20210227.md
src/: Game.ts  Random.js  assets.rs  autoscale.ts  enum-util.ts  foo.json  game.js  game.rs  game.ts  geo.ts  gfx.ts  image_loader.rs  index.css  index.html  index.js  index.ts  level.js  level0.ts  lib.rs  limits.ts  load-scene.ts  manifest.json  random.js  random.ts  rect.js  rect.test.js  safe-gl.ts  scene.json  store.js  store.ts  test.util.test.ts  types.d.ts  util.js  util.test.js  util.ts
src/animator/: Animator.test.ts  Animator.ts  AnimatorParser.ts
src/aseprite/: aseprite-parser.test.ts  aseprite-parser.ts  atlas-parser.test.ts
src/aseprite_atlas/: aseprite.rs  mod.rs
src/assets/: a-summary-of-you.json  animation-draw-order.js  animation-id.js  animation-id.test.js  animation-layer.js  animation-layer.test.js  animation.test.ts  aseprite.ts  asepriteParser.test.ts  asepriteParser.ts  asset-loader.ts  atlas.d.ts  atlas.js  atlas.json  atlas.ts  image.json  index.css  level-loader.ts  level0.js  mem-font.json  mod.rs  palette.js  strings.json  texture.test.ts  texture.ts
src/atlas/: Aseprite.ts  Atlas.ts  AtlasID.test.ts  AtlasID.ts  AtlasIDParser.ts  AtlasParser.test.ts  AtlasParser.ts  animation-id-config.ts  animation-id-parser.ts  animation-id.test.ts  animation-id.ts  animation_id.rs  animator.rs  aseprite.rs  aseprite.ts  atlas-id-parser.ts  atlas-id.test.ts  atlas-parser.test.ts  atlas-parser.ts  atlas.json  atlas.json.test.ts  atlas.rs  atlas.ts  atlas_id.rs  atlas_parser.rs  mod.rs  parser.rs
src/audio/: Synth.ts  player.ts  synth.ts
src/blueprints/: bee.json  blueprint.rs  blueprint_id.rs  foo.json  id.rs  manufacture_blueprint.rs  manufacturer.rs  mod.rs  patch_blueprint.rs  rain_cloud.json  save_dialog.json
src/collision/: CollisionPredicate.test.ts  CollisionPredicate.ts  CollisionPredicateConfig.ts  CollisionPredicateParser.ts  CollisionType.test.ts  CollisionType.ts  CollisionTypeConfig.ts  CollisionTypeParser.ts  EntityCollider.test.ts  EntityCollider.ts  EntityCollision.ts  entity-collider.ts  entity-collision.ts
src/components/: align.rs  bounds.rs  collision.rs  cursor.rs  entity_operator.rs  max_wh.rs  mod.rs  player.rs  render_source.rs  renderable.rs  resources.rs  text.rs  velocity.rs  wraparound.rs
src/drawables/: animatable.js  animation-id.js  animation-id.test.js  animation-layer.js  animation-layer.test.js  animator.js  animator.test.js  atlas.js  drawable.js  layer.js
src/ecs/: align.rs  bounds.rs  collision.rs  entity_operator.rs  max_wh.rs  mod.rs  operator.rs  render_source.rs  renderable.rs  sprite.rs  text.rs  velocity.rs  wraparound.rs
src/entities/: AnimationPlayer.js  AnimationPlayer.test.js  Apple.ts  AppleTree.ts  Background.js  Backpacker.ts  BackpackerIcon.ts  Bee.ts  Bunny.ts  Bush.ts  Button.ts  Cattails.ts  Checkbox.ts  Cloud.js  Cloud.ts  Clover.ts  Compartment.ts  Conifer.ts  Cursor.ts  DateVersionHash.ts  DestinationMarker.ts  EntityPicker.ts  Flag.ts  Flower.ts  Fly.ts  Frog.ts  Fruit.ts  Grass.js  Grass.ts  Group.ts  Hill.js  IsoGrass.ts  Item.ts  LevelEditorMenu.ts  LevelEditorSandbox.ts  LevelEditorSandboxFileUtil.ts  LifeCounter.ts  LifeCounterParser.ts  LifeCounterPropsConfig.ts  Marquee.ts  (+82 more)
src/entity/: Entity.test.ts  Entity.ts  EntityConfig.ts  EntityFactory.ts  EntityID.test.ts  EntityID.ts  EntityIDParser.ts  EntityParser.test.ts  EntityParser.ts  EntitySerializer.ts  EntityStateParser.ts  EntityType.test.ts  (+3 more)
tests/: app.rs
(+1109 files in other folders)
