[package]
# [strings]
name = 'nature-elsewhere'
description = 'An isometric adventure in an idealized state of nature.'
version = '0.0.0'
keywords = ['game', 'webgl', 'isometric', 'adventure', 'pixel-art', 'aseprite']
categories = ['games']
documentation = 'https://github.com/oddoid/nature-elsewhere'
homepage = 'https://natureelsewhere.com'
repository = 'https://github.com/oddoid/nature-elsewhere'
readme = 'readme.md'
license = 'GPL-3.0-only AND CC-BY-SA-4.0'
edition = '2018'
authors = ['oddoid']

[badges]
is-it-maintained-issue-resolution = { repository = 'https://github.com/oddoid/nature-elsewhere' }
is-it-maintained-open-issues = { repository = 'https://github.com/oddoid/nature-elsewhere' }
maintenance = { status = 'experimental' }

[lib]
crate-type = ['cdylib']

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true

[dependencies]
bincode = '=1.2.1'
console_error_panic_hook = '=0.1.6'
failure = '=0.1.7'
lazy_static = '=1.4.0'
num = '=0.2.1'
serde = {version = '=1.0.104', features = ['derive']}
serde_json = '=1.0.48'
serde_repr = '=0.1.5'
specs = {version = '=0.16.1', default-features = false, features = ['serde', 'specs-derive']}
wasm-bindgen = {version = '=0.2.59', features = ["serde-serialize"]}
wasm-bindgen-futures = '=0.4.9'
web-sys = {version = '=0.3.36', features = [
  'AddEventListenerOptions', 'AngleInstancedArrays', 'console', 'Document',
  'Element', 'Event', 'EventListener', 'EventTarget', 'HtmlCanvasElement', 'HtmlElement',
  'HtmlImageElement', 'KeyboardEvent', 'Performance', 'PointerEvent',
  'WebGlActiveInfo', 'WebGlBuffer', 'WebGlProgram', 'WebGlRenderingContext',
  'WebGlContextAttributes', 'WebGlShader', 'WebGlTexture',
  'WebGlUniformLocation', 'Window', 'MouseEvent',
  'OesVertexArrayObject', 'WebglLoseContext', 'WebGlVertexArrayObject', 'Request', 'Headers','Response'
]}
