[package]
# [strings]
name = 'nature-elsewhere'
description = 'An isometric adventure in an idealized state of nature.'
version = '0.0.0'
keywords = ['game', 'webgl', 'isometric', 'adventure', 'pixel-art', 'aseprite']
categories = ['games']
documentation = 'https://github.com/oddoid/nature-elsewhere'
homepage = 'https://natureelsewhere.com'
repository = 'https://github.com/oddoid/nature-elsewhere'
readme = 'readme.md'
license = 'GPL-3.0-only AND CC-BY-SA-4.0'
edition = '2018'
authors = ['oddoid']

[badges]
is-it-maintained-issue-resolution = { repository = 'https://github.com/oddoid/nature-elsewhere' }
is-it-maintained-open-issues = { repository = 'https://github.com/oddoid/nature-elsewhere' }
maintenance = { status = 'experimental' }

[lib]
# No need to include "Rust specific stuff." See
# https://doc.rust-lang.org/stable/edition-guide/rust-2018/platform-and-target-support/cdylib-crates-for-c-interoperability.html.
crate-type = ['cdylib']

[profile.release]
opt-level = 'z' # Optimize for size.
# Enable Link-Time Optimiziation. See
# https://stackoverflow.com/questions/52291006/why-does-using-lto-increase-the-size-of-my-rust-binary.
lto = true

[dependencies]
bincode = '=1.2.1'
console_error_panic_hook = '=0.1.6'
num = '=0.2.1'
serde = '=1.0.105'
# For Serialize_repr.
serde_repr = '=0.1.5'
# serde-serialize enables JsFuture.into_serde() trait.
wasm-bindgen = {version = '=0.2.60', features = ['serde-serialize']}
# For fetch.
wasm-bindgen-futures = '=0.4.10'

[dependencies.specs]
version = '=0.16.1'
# Disable parallelization which is unsupported for Wasm.
default-features = false
# serde enables World de/serialization. See
# https://specs.amethyst.rs/docs/tutorials/13_saveload.html?highlight=serde#saveload.
# specs-derive enables Component derive macros. See
# https://specs.amethyst.rs/docs/tutorials/02_hello_world.html?highlight=specs-derive#components.
# shred-derive enables structs for SystemData. See
# https://specs.amethyst.rs/docs/tutorials/06_system_data.html#specifying-systemdata.
features = ['serde', 'specs-derive', 'shred-derive']

[dependencies.web-sys]
version = '=0.3.37'
# Derived by compilation.
features = [
  'AngleInstancedArrays', 'console', 'Document', 'Headers', 'HtmlCanvasElement',
  'HtmlImageElement', 'OesVertexArrayObject', 'PointerEvent', 'Response',
  'Request', 'WebGlActiveInfo', 'WebGlBuffer', 'WebGlContextAttributes',
  'WebglLoseContext', 'WebGlProgram', 'WebGlRenderingContext', 'WebGlShader',
  'WebGlTexture', 'WebGlUniformLocation', 'WebGlVertexArrayObject', 'Window'
]

[dev-dependencies]
# For from_json! macro.
serde_json = '=1.0.48'
